@@ -75,6 +75,8 @@ Wolfpack 12.9.14 Beta (SVN)
   - Its now possilbe to carve human corpses.
   - Taming now removes NPCs from spawn gems too.
   - Updated the add menu to the new definition iteration system.
+  - Updated the decoration script.
+  - Updated the allskills command to account for the ALLSKILLS constant.
  * Misc. Changes:
  * Known Issues, Bugs, and Missing Features:
   - Some skills are still incomplete.
